src/tests/evaluation_error/type_mismatch_boolean_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_boolean_infix_expression__test_type_mismatch_boolean_infix_expression_case_3_evaluation_error.snap
---
source: src/tests/evaluation_error/type_mismatch_boolean_infix_expression/mod.rs
assertion_line: 31
expression: error
---
Err(
    "Type mismatch, cannot apply the != infix operator to operands of type INTEGER and STRING.",
)
