src/tests/evaluation_error/type_mismatch_boolean_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_boolean_infix_expression__test_type_mismatch_boolean_infix_expression_case_3_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_boolean_infix_expression/mod.rs
assertion_line: 21
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 82,
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: NotEquals,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: String {
            literal: "this is a string",
        },
        position: Position {
            line: 1,
            column: 7,
        },
    },
]
